Fixed image stretching and button press visual

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -32,6 +32,12 @@ main {
     background-color: #bbb;
 }
 
+.btn:active {
+    color: #999;
+    background-color: #444;
+    box-shadow: inset 0 -1px 0 #bbb,
+    inset 0 1em 1em #232323;
+}
 .btn:focus {
     color: #999;
     background-color: #444;
@@ -72,10 +78,7 @@ main {
     background-color: rgb(0, 0, 0, .5);
 }
 
-/* img {
-    image-rendering: -moz-crisp-edges;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: -o-crisp-edges;
-    image-rendering: -webkit-optimize-contrast;
-    -ms-interpolation-mode: nearest-neighbor;
-} */
+img {
+    object-fit: contain;
+    width: 100%;
+}
